# Django-kibru

./: README.md  pyproject.toml  setup.py
kibru/: __init__.py  apps.py  settings.py  urls.py  utils.py  views.py  widgets.py
kibru.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kibru/static/kibru/css/: main.css
kibru/static/kibru/js/: change_form.js  main.js  ui-builder.js
kibru/templates/admin/: actions.html  base.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  date_hierarchy.html  delete_confirmation.html  delete_selected_confirmation.html  index.html  login.html  object_history.html  pagination.html  search_form.html  submit_line.html
kibru/templates/admin/auth/user/: change_password.html
kibru/templates/admin/filer/: delete_selected_files_confirmation.html
kibru/templates/admin/filer/folder/: change_form.html
kibru/templates/admin/import_export/: change_list_export_item.html  change_list_import_item.html  export.html  import.html
kibru/templates/admin/includes/: fieldset.html
kibru/templates/admin/solo/: change_form.html
kibru/templates/admin_doc/: view_detail.html
kibru/templates/kibru/includes/: carousel.html  collapsible.html  horizontal_tabs.html  single.html  ui_builder_panel.html  vertical_tabs.html
kibru/templates/registration/: base.html  logged_out.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_form.html
kibru/templatetags/: kibru.py
(+1 files in other folders)
