[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "kibru_kibru"
version = "0.0.1"
authors = [
  { name="Kibru", email="kibrug474@gmail.com" },
]
description = "A Django Dashboard"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kibrug/Django-kibru"
"Bug Tracker" = "https://github.com/kibrug/Django-kibru/issues"